Fix high contrast mode issues (#1910)
Additionally adds css variables to be used by plugins

--- a/scm-ui/ui-styles/src/light.scss
+++ b/scm-ui/ui-styles/src/light.scss
@@ -31,6 +31,11 @@ $button-disabled-opacity: 0.25;
 @import "utils/_post.scss";
 
 :root {
+  --scm-secondary-background: #{$white};
+  --scm-secondary-text: #{$black};
+  --scm-border: 1px solid #dbdbdb;
+  --scm-column-selection: #{$link-25};
+
   --sh-base-color: #363636;
   --sh-font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   --sh-block-background: #ffffff;
@@ -45,7 +50,7 @@ $button-disabled-opacity: 0.25;
   --sh-variable-color: #a74eb2;
   --sh-function-color: #ff3860;
   --sh-keyword-color: #00a984;
-  --sh-selected-color: #7fe3cd;
+  --sh-selected-color: #{$warning-25};
   --sh-highlight-background: #f5f5f5;
   --sh-highlight-accent: #99d8f3;
 }
